--- a/example/testapp/goro.yaml
+++ b/example/testapp/goro.yaml
@@ -1,7 +1,7 @@
 app:
   name: testapp
   module: testapp
-  work_dir: ""
+  work_dir: "/Users/hanagantig/projects/goro/example/testapp"
 
 storages:
   - mysql
