feature(slog): support slog logger
* add chunk zap and slog
* add struct logger in config
* add field logger in goro.yaml
* add validation supported loggers
* refactor template files

--- a/example/testapp/goro.yaml
+++ b/example/testapp/goro.yaml
@@ -3,6 +3,9 @@ app:
   module: testapp
   work_dir: ""
 
+# Set one of supported loggers: [ "zap" , "slog" ]
+logger: slog 
+
 storages:
   - mysql
   - mysqlx
